--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
     <div class="row">
       <div class="col-md-12 blog-main">
         <h3 class="pb-3 mb-4 font-italic border-bottom">
-          陈科
+          高颂扬
         </h3>
-        最后更新：2023/05/16 22:50 UTC +08:00
+        最后更新：2023/10/22 3：49 UTC +08:00
         <div class="row">
           <div class="col-md-9">
-            本科三年级（2024年6月毕业）<br>
+            本科三年级（2025年6月毕业）<br>
             专业: 人工智能<br>
             学院: 际銮书院&amp;信息工程学院<br>
             学校: 南昌大学<br>
