--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <a href="EnglishPage.html">[English Page]</a> 
           </div>
           <div class="col-md-3">
-            <img src="./image/chenke.jpg" style="width:129px;height:166px">
+            <img src="./image/songyang.jpg" style="width:129px;height:166px">
           </div>
         </div>
 
