--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0044)https://good.ncu.edu.cn/Pages/Professor.html -->
 <html lang="en">
 
 <head>
@@ -107,207 +106,26 @@
         <h3 class="pb-3 mb-4 font-italic border-bottom">
           高颂扬
         </h3>
-        最后更新：2023/10/22 3：49 UTC +08:00
         <div class="row">
           <div class="col-md-9">
             本科三年级（2025年6月毕业）<br>
             专业: 人工智能<br>
             学院: 际銮书院&amp;信息工程学院<br>
             学校: 南昌大学<br>
-            邮箱: ncukechen@email.ncu.edu.cn &nbsp;& &nbsp;ke_chen777@163.com
+            邮箱: 6109121109@email.ncu.edu.cn &nbsp;& &nbsp;gsy2564696532@163.com
             <p></p>
             地址: 南昌大学前湖校区际銮书院（学生宿舍一栋）
             <p></p>
-            <a href="https://github.com/kechen666">[Github]</a>
-            <a href="https://www.zhihu.com/people/chen-ke-93-76">[知乎]</a>
-            <a href="./cv/简历-陈科.pdf">[个人简历]</a>
-            <a href="EnglishPage.html">[English Page]</a> 
+            <a href="https://github.com/songyang0603">[Github]</a>
+            <a href="https://www.zhihu.com/people/zhui-feng-zheng-de-nu-hai-3">[知乎]</a>
+            <a href="./cv/高颂扬.pdf">[个人简历]</a>
+            <a href="https://scholar.google.com.hk/citations?user=1OyMQr0AAAAJ&hl=zh-CN">[谷歌学术]</a> 
           </div>
           <div class="col-md-3">
             <img src="./image/songyang.jpg" style="width:129px;height:166px">
           </div>
         </div>
 
-        <hr>
-        <p></p>
-        <h4>关于我</h4>
-        <p></p>
-        <p>
-          我目前正处于本科大三，近期主要在自主学习中（量子计算、高性能计算），并且阅读一些相关的论文、参与一些活动竞赛提高自己的眼界。除此之外，我还尝试在知乎发布文章（博客），在Github发布一些代码和项目，我希望这不仅仅能够。 <br>
-        <p></p>
-        由于我的本科专业是人工智能，所以我的课内的背景知识主要包括计算机和人工智能领域，当然我也接触过一些嵌入式硬件。 
-        但我目前认为量子计算是一门非常有价值和意义的学科，我对其有浓厚的兴趣。我认为量子计算会是一个颠覆性的技术，我希望能从中做一些科研工作，实现自己的价值。 <br>
-        <p></p>
-        由于我是计算机领域的出身，所以我目前的大部分工作都是侧重于“classical computers for quantum”（如何通过经典计算知识优化量子计算）。
-        目前我主要考虑从系统层面对于量子计算机系统进行优化，其中接触过一些量子编译器、量子模拟器的工作，我认为其中还有很多内容我可以去探索。我不排斥量子算法，但我认为相较于算法，我可能会更对系统感兴趣。<br>
-        <p></p>
-        我目前正在进行的研究兴趣是：基于经典计算机的知识背景，结合量子计算知识，尝试探索目前一种新的高性能架构（目前只是在有些问题上高性能）—— 量子计算，以实现更高算力，解决目前更多难以解决的问题。 <br>
-        <p></p>
-        目前涉及领域：量子分布式计算、量子编译、经典量子模拟器、高性能计算、机器学习（深度学习）、量子机器学习、量子网络、嵌入式开发。<br>
-        <p></p>
-        个人认为自己具有不错的系统编程能力，较为熟练掌握Python与C++开发语言，并且具有较为全面的计算机层面知识（包括软件与硬件），能够独立解决问题，也善于合作解决问题。<br>
-        <p></p>
-        我希望认识很多优秀的人或志同道合的人，我希望从他人身上学习一些道理，并且提高自己的交流表达能力，如果你有任何问题或者想法，欢迎通过上述方式直接联系我。
-        </p>
-
-        <hr>
-        <p></p>
-        <h4>教育经历</h4>
-        <p></p>
-        <p> 本科教育：2020年-至今，南昌大学际銮书院&amp;&&amp;信息工程学院）：
-        <ul>
-          <li>
-            2020年9月进入南昌大学过程装备与控制专业，入校后参加校内人工智能实验班招生，以不超过5%录取率（招25人/报名500+），笔试数学第一97(满分100分)，面试良好，最终进入际銮书院20级人工智能实验班（颁发南昌大学人工智能实验班学位的第一届）。
-          </li>
-          <li>
-            成绩（前五个学期）：专业成绩86.26/100，总成绩85.55/100，GPA 3.47/4，排名12/37（原50人，挂科退班，推研比例60%左右）。
-          </li>
-        </ul>
-        </p>
-        <p>
-          研究生教育：
-        <ul>
-          <li>
-            正在进一步准备中，研究生阶段依旧希望从事量子方向，目前正在夏令营准备中，最新消息可能需要等到2023年9月28日更新。
-          </li>
-        </ul>
-        </p>
-        <hr>
-        <p></p>
-        <h4>科研、竞赛、项目、技术栈</h4>
-        <p></p>
-        通过阅读下面描述的经历，你能够大致了解我上大学至今，掌握了哪些知识和能力。
-        <p></p>
-        量子计算：
-        <ul>
-          <li>
-            （2023年3月-至今）寻找未来合适的量子计算研究平台。
-          </li>
-          <li>
-            （2023年7月-2023年8月）我参与了IBM举办的Qiskit Global Summer School 2023: Theory to Implementation (QGSS23)，完成所以lab，获得Quantum Excellence Badges。
-          </li>
-
-          <li>
-            （2023年5月）我参加了本源量子的高校组，我一个人一个队，在初赛拿到了91/100分，前10的成绩，由于参加挑战杯等其他事情，我没有参加决赛，总成绩拿到了二等奖。
-          </li>
-
-          <li>
-            （2022年12月-至今）目前正在学习qiskit中经典上的量子模拟器的源码，进行一些测试，目前正在书写一些教程，之后打算发布到知乎中。<br>
-
-            目前正在准备，花费课余时间完成一个量子模拟器，我很希望有感兴趣的同学能够一起，后续打算开源到Github上。
-          </li>
-
-          <li>
-            （2022年6月-至今）参与中科大-量子培训班，目前正在进一步科研学习。<br>
-            学习书籍：Quantum Computation and Quantum Information, Nielsen.<br>
-            分享资料：<a
-              href="https://github.com/kechen666/quantum-training-materials/tree/main/Quantum%20training-class-report-materials">私人量子培训分享</a><br>
-            学习到很多量子计算知识（量子力学基本知识、量子算法、量子超导硬件、量子模拟器等方面的知识），认识到一些志同道合的人。
-          </li>
-
-          <li>
-            (2022年3月-2022年5月)
-            华为黑客松量子算法竞赛，考虑使用启发式量子算法（QuantumNAS）优化经典混合量子神经网络（变分量子电路），以获取更高的图像识别准确度，我学习了量子机器学习的知识。<br>
-          </li>
-
-          <li>(2021年1月-2022年5月)学习、复现"QuCloud: A New Qubit Mapping Mechanism for Multi-programming Quantum Computing in
-            Cloud Environment"(2021 HPCA)论文的量子比特映射。
-            <br>算是量子计算的初入门，整个学习过程中，对量子程序映射、量子编译有一定的了解。<br>
-            相关资料：<a href="https://github.com/kechen666/Quantum-Compilation-Efficiency">github代码</a>，<a
-              href="https://zhuanlan.zhihu.com/p/487655956">论文阅读总结</a>。
-          </li>
-
-        </ul>
-        计算机科学：
-        <ul>
-          <li>
-            (2023年2月-至今)大学生超算比赛（23SC），担任队长，目前我们成功进入了IndySCC，这对于我们一只新手队伍来说很不错了，期待我们能够在决赛取得好成绩。
-          </li>
-          <li>
-            (2022年1月-2022年3月) 亚洲大学生超算比赛（22ASC），担任队伍HPC应用题目负责人。针对获得戈登贝尔奖的分子动力学模拟方法—<a
-              href="https://github.com/deepmodeling/deepmd-kit">deepmd-kit库</a>进行性能分析与优化。<br>
-            最终取得二等奖，我主要负责对deepmd-kit的源码阅读与性能测试、优化思路提供与测试。<br>
-            技术领域：深度学习（tensorflow）、并行计算（OpenMP、MPI、CUDA、Hadoop分布式训练）、性能测试（Python程序性能分析）、分子动力学模拟基础知识。
-          </li>
-          <li>
-            （2021年11月左右）逐梦杯，在深度学习芯片（TPU）上移植自动驾驶算法（比如YOLO），虽然最后结果没好，但是大致了解深度学习芯片。
-          </li>
-          <li>
-            （2020年12月-2022年9月）各种数学建模竞赛经历：过程中担任队长，主要负责算法思路、编程书写，协助论文书写，最高取得美赛F奖。<br>
-            技术领域：时序预测（LSTM、现有框架）、启发式搜索算法（遗传、粒子群）、强化学习。<br>
-            优劣：能够快速学习知识，但是无法形成长期的工作。
-          </li>
-        </ul>
-
-        嵌入式（单片机、FPGA、无人机）：
-        <ul>
-          <li>
-            (2022年11月-2022年12月)全国FPGA大赛，需要基于RSIC-V给新FPGA设备适配CPU、嵌入式操作系统等，主要负责嵌入式操作系统的移植、以及RISC-V实现CPU代码的阅读。<br>
-            技术领域：基于指令集的CPU设计（计算机组成原理、verilog）、嵌入式操作系统的设计（操作系统）。<br>
-            相关资料开源github：<a
-              href="https://github.com/kechen666/FPGA_Competition-RISC-V_Processor-in-PGL22G">FPGA_Competition-RISC-V_Processor-in-PGL22G</a>
-          </li>
-          <li>
-            (2021年9月-2021年11月)智在飞行无人机比赛，初赛通过写控制算法、图像识别，决赛前往上海交大进行线下实物飞行。我整个流程中，负责代码编写、算法思考，除此之外，还需要进行硬件的适配。<br>
-            技术领域：无人机飞控、路径规划、图像识别、ROS机器人操作系统。
-          </li>
-          <li>
-            (2021年4月-2021年6月)单片机开发平衡单车，我主要负责软件算法方面，通过为硬件书写滤波函数、平衡策略。<br>
-            技术领域：单片机（C编程）、控制算法（卡尔曼滤波、PID）。
-          </li>
-        </ul>
-        <p></p>
-
-        <hr>
-        <p></p>
-        <h4>荣誉与奖项</h4>
-        <p></p>
-        竞赛获奖：
-        <ul>
-          <li>2020年mathorcup高校数学建模挑战赛——大数据竞赛 三等奖</li>
-          <li>2021年第十一届mathorcup高校数学建模挑战赛 三等奖</li>
-          <li>2021“深圳杯”数学建模挑战赛优秀论文提名奖</li>
-          <li>"智在飞翔" 2021 第八届无人飞行器智能感知技术竞赛废墟场景线上仿真赛三等奖</li>
-          <li>2021年全国数学建模大赛 省级一等奖</li>
-          <li>2022 ASC 学生超级计算机挑战赛 二等奖</li>
-          <li>2022年第十二届mathorcup高校数学建模挑战赛 二等奖</li>
-          <li>2022年美国数学建模竞赛优秀论文入围奖（F奖）</li>
-          <li>2022年全国数学建模大赛 省级二等奖</li>
-          <li>2022年全国大学生嵌入式芯片与系统设计竞赛——FPGA创新设计竞赛三等奖</li>
-          <li>2023年第十八届“挑战杯”江西省大学生课外学术科技作品竞赛 二等奖（第二责任人）</li>
-          <li>2023年第二届CCF“司南杯”量子计算编程挑战赛高校组 二等奖</li>
-        </ul>
-        大学生创新创业训练计划：
-        <ul>
-          <li>完成南昌大学省级大学生创新创业训练计划（基于图论的门级电路拓展并行仿真方法）。</li>
-        </ul>
-        专利：
-        <ul>
-            <li> 一种适用大规模海洋数据的存储与处理方法、系统（在申）。（撰写人）</li>
-        </ul>
-        奖学金：
-        <ul>
-            <li> （2021年10月）南昌大学际銮书院一等奖学金</li>
-            <li> （2022年10月）南昌大学际銮书院二等奖学金</li>
-        </ul>
-        <hr>
-        <p></p>
-        <h4>其他经历</h4>
-        <p></p>
-        <ul>
-          <li>志愿服务：大学期间担任第七届中国国际“互联网+”大学生创新创业大赛志愿者，并圆满完成接待评委工作。</li>
-          <li>社团活动：我与润明、颂扬一起组建了<a
-            href="https://github.com/Open-Source-Makers-Association">Open Source Makers Association</a>（OSMA），我希望能够真正帮助大家一起聚集起来，一起学习技术内容。</li>
-        </ul>
-
-        <h4>兴趣爱好</h4>
-        <p></p>
-        <ul>
-          <li>运动：我喜欢跑步，他让我很解压，我可以在跑步中不需要思考如何事情。同时我也希望打羽毛球、乒乓球，同时也接触过篮球与足球。</li>
-          <li>电影：我希望看有逻辑的、真实的电影，我希望从电影中了解别人的故事，从而用于激励自己，比如阿甘正传。</li>
-          <li>读书：我目前比较少时间读书，但我对于一些有深刻思考的书籍是非常感兴趣的，我在迷茫和无聊的时候，我会阅读，比如活着，我也希望阅读资本论。</li>
-          <li>娱乐：我同时是一个英雄联盟的资深玩家，并且目前也在接触无畏契约，我习惯用游戏进行社交和生活，让我在累的时候，能够放松身心。</li>
-        </ul>
       </div>
 
     </div><!-- /.row -->
