--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <p></p>
             <a href="https://github.com/songyang0603">[Github]</a>
             <a href="https://www.zhihu.com/people/zhui-feng-zheng-de-nu-hai-3">[知乎]</a>
-            <a href="./cv/高颂扬（对外版本）.pdf">[个人简历]</a>
+            <a href="./cv/高颂扬.pdf">[个人简历]</a>
             <a href="https://scholar.google.com.hk/citations?user=1OyMQr0AAAAJ&hl=zh-CN">[谷歌学术]</a> 
           </div>
           <div class="col-md-3">
