--- a/index.html
+++ b/index.html
@@ -104,25 +104,23 @@
     <div class="row">
       <div class="col-md-12 blog-main">
         <h3 class="pb-3 mb-4 font-italic border-bottom">
-          高颂扬
+          Jianyu Wang
         </h3>
         <div class="row">
           <div class="col-md-9">
-            本科三年级（2025年6月毕业）<br>
-            专业: 人工智能<br>
-            学院: 际銮书院&amp;信息工程学院<br>
-            学校: 南昌大学<br>
-            邮箱: 6109121109@email.ncu.edu.cn &nbsp;& &nbsp;gsy2564696532@163.com
+            Undergraduate, Third Year (Expected Graduation: June 2025)<br>
+            Major: Microelectronic Science and Engineering<br>
+            University: Beijing Institute of Technology<br>
+            Department: School of Integrated Circuits and Electronics<br>
+            E-mail: jianyu.wang@bit.edu.cn 
             <p></p>
-            地址: 南昌大学前湖校区际銮书院（学生宿舍一栋）
+            Address: 北京市海淀区中关村南大街5号院
             <p></p>
-            <a href="https://github.com/songyang0603">[Github]</a>
-            <a href="https://www.zhihu.com/people/zhui-feng-zheng-de-nu-hai-3">[知乎]</a>
-            <a href="./cv/高颂扬.pdf">[个人简历]</a>
-            <a href="https://scholar.google.com.hk/citations?user=1OyMQr0AAAAJ&hl=zh-CN">[谷歌学术]</a> 
+            <a href="https://github.com/jianyu03">[Github]</a>
+            <a href="./cv/Jianyu Wang.pdf">[CV]</a>
           </div>
           <div class="col-md-3">
-            <img src="./image/songyang.jpg" style="width:129px;height:166px">
+            <img src="./image/jianyu wang.jpg" style="width:129px;height:166px">
           </div>
         </div>
 
