--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="./config_file/jquery-3.6.1.min.js"></script>
   <script src="./config_file/selected.js"></script>
 
-  <title>songyang</title>
+  <title>Jianyu Wang</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="./config_file/bootstrap.min.css"
