--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
             Department: School of Integrated Circuits and Electronics<br>
             E-mail: jianyu.wang@bit.edu.cn 
             <p></p>
-            Address: 北京市海淀区中关村南大街5号院
+            Address: 5 South Zhongguancun Street, Haidian District, Beijing, China
             <p></p>
             <a href="https://github.com/jianyu03">[Github]</a>
             <a href="./cv/Jianyu Wang.pdf">[CV]</a>
+            <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl">[Google Scholar]</a>
           </div>
           <div class="col-md-3">
             <img src="./image/jianyu wang.jpg" style="width:129px;height:166px">
