--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             <a href="https://github.com/jianyu03">[Github]</a>
             <a href="./cv/Jianyu Wang.pdf">[CV]</a>
             <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl">[Google Scholar]</a>
+            <a href="https://www.semanticscholar.org/author/Jianyu-Wang/2290025108">[Semantic Scholar]</a>
+            
           </div>
           <div class="col-md-3">
             <img src="./image/jianyu wang.jpg" style="width:129px;height:166px">
