--- a/index.html
+++ b/index.html
@@ -104,17 +104,18 @@
     <div class="row">
       <div class="col-md-12 blog-main">
         <h3 class="pb-3 mb-4 font-italic border-bottom">
-          Jianyu Wang
+          Jianyu Wang(王健宇)
         </h3>
         <div class="row">
           <div class="col-md-9">
-            Undergraduate, Third Year (Expected Graduation: June 2025)<br>
-            Major: Microelectronic Science and Engineering<br>
-            University: Beijing Institute of Technology<br>
-            Department: School of Integrated Circuits and Electronics<br>
-            E-mail: jianyu.wang@bit.edu.cn 
+            <b>Undergraduate</b>, Third Year (Expected Graduation: June 2025)<br>
+            <b>Major:</b> Microelectronic Science and Engineering<br>
+            <b>Research Interests:</b> Artificial Intelligence, Robotics, Embedded Systems, and Microelectronics.<br>
+            <b>University:</b> Beijing Institute of Technology<br>
+            <b>Department:</b> School of Integrated Circuits and Electronics<br>
+            <b>E-mail:</b> jianyu.wang@bit.edu.cn 
             <p></p>
-            Address: 5 South Zhongguancun Street, Haidian District, Beijing, China
+            <b>Address:</b> 5 South Zhongguancun Street, Haidian District, Beijing, China
             <p></p>
             <a href="https://github.com/jianyu03">[Github]</a>
             <a href="./cv/Jianyu Wang.pdf">[CV]</a>
