--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
           <div class="col-md-9">
             <b>Undergraduate</b>, Third Year (Expected Graduation: June 2025)<br>
             <b>Major:</b> Microelectronic Science and Engineering<br>
-            <b>Research Interests:</b> Artificial Intelligence, Robotics, Embedded Systems, and Microelectronics.<br>
             <b>University:</b> Beijing Institute of Technology<br>
             <b>Department:</b> School of Integrated Circuits and Electronics<br>
-            <b>E-mail:</b> jianyu.wang@bit.edu.cn 
+            <b>E-mail:</b> jianyu.wang@bit.edu.cn <br>
+            <b>Research Interests:</b> Artificial Intelligence, Robotics, Embedded Systems, and Microelectronics.
             <p></p>
             <b>Address:</b> 5 South Zhongguancun Street, Haidian District, Beijing, China
             <p></p>
