--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
             <p></p>
             <b>Address:</b> 5 South Zhongguancun Street, Haidian District, Beijing, China
             <p></p>
-            <a href="https://github.com/jianyu03">[Github]</a>
-            <a href="./cv/Jianyu Wang.pdf">[CV]</a>
             <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl">[Google Scholar]</a>
             <a href="https://www.semanticscholar.org/author/Jianyu-Wang/2290025108">[Semantic Scholar]</a>
+            <a href="https://github.com/jianyu03">[Github]</a>
+            <a href="./cv/Jianyu Wang.pdf">[Resume]</a>
+
             
           </div>
           
