--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
             <img src="./image/jianyu wang.jpg" style="width:129px;height:166px">
           </div>
           <div class="col-md-9">
-            <b>Undergraduate</b>, Third Year (Expected Graduation: June 2025)<br>
+            <b>Undergraduate</b>, Expected Graduation: June 2025<br>
             <b>Major:</b> Microelectronic Science and Engineering<br>
             <b>University:</b> Beijing Institute of Technology<br>
             <b>Department:</b> School of Integrated Circuits and Electronics<br>
-            <b>E-mail:</b> jianyu.wang@bit.edu.cn <br>
             <b>Research Interests:</b> Artificial Intelligence, Robotics, Embedded Systems, and Microelectronics.
             <p></p>
+            <b>E-mail:</b> jianyu.wang@bit.edu.cn <br>
             <b>Address:</b> 5 South Zhongguancun Street, Haidian District, Beijing, China
             <p></p>
             <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl">[Google Scholar]</a>
             <a href="https://www.semanticscholar.org/author/Jianyu-Wang/2290025108">[Semantic Scholar]</a>
             <a href="https://github.com/jianyu03">[Github]</a>
             <a href="./cv/Jianyu Wang.pdf">[Resume]</a>
-
-            
+            <p></p>
+            <b>I am interested in pursuing a Direct Ph.D. and am exploring potential positions!</b>
           </div>
           
         </div>
