--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
             <b>Department:</b> School of Integrated Circuits and Electronics<br>
             <b>Research Interests:</b> Artificial Intelligence, Robotics, Embedded Systems, and Microelectronics.
             <p></p>
+            <font color="red"><b>I am interested in pursuing a Direct Ph.D. and am exploring potential positions!</b></font>
+            <p></p>
             <b>E-mail:</b> jianyu.wang@bit.edu.cn <br>
             <b>Address:</b> 5 South Zhongguancun Street, Haidian District, Beijing, China
             <p></p>
             <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl">[Google Scholar]</a>
             <a href="https://www.semanticscholar.org/author/Jianyu-Wang/2290025108">[Semantic Scholar]</a>
             <a href="https://github.com/jianyu03">[Github]</a>
-            <a href="./cv/Jianyu Wang.pdf">[Resume]</a>
-            <p></p>
-            <b>I am interested in pursuing a Direct Ph.D. and am exploring potential positions!</b>
+            <a href="./cv/Jianyu Wang.pdf">[CV]</a>
           </div>
           
         </div>
