--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <img src="./image/jianyu wang.jpg" style="width:129px;height:166px">
           </div>
           <div class="col-md-9">
-            <font color="red"><b>I am interested in pursuing a Direct Ph.D. and am exploring potential positions!</b></font>
+            <p style="font-family: Arial, sans-serif; color:red; font-size: 18px;"><b>I am interested in pursuing a Direct Ph.D. and am exploring potential positions!</b></p>
             <p></p>
             <b>Undergraduate</b>, Expected Graduation: June 2025<br>
             <b>Major:</b> Microelectronic Science and Engineering<br>
