--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h3 class="pb-3 mb-4 font-italic border-bottom">
           Jianyu Wang(王健宇)
         </h3>
-        <div class="row", style="center">
+        <div class="row", style="text-align: center;">
           <div class="col-md-3">
             <img src="./image/jianyu wang.jpg" style="width: 177px; height: 278px">
           </div>
