--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         <h3 class="pb-3 mb-4 font-italic border-bottom">
           Jianyu Wang (王健宇)
         </h3>
-        <div class="row", style="text-align: center;">
+        <div class="row">
           <div class="col-md-3">
-            <img src="./image/jianyu wang.jpg" style="width: 177px; height: 278px">
+            <img src="./image/jianyu wang.jpg" style="width: 177px; height: 248px">
           </div>
           <div class="col-md-9">
             <p style="font-family: Arial, sans-serif; color:red; font-size: 18px;"><b>I am interested in pursuing a Direct Ph.D. and am exploring potential positions!</b></p>
