--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <img src="./image/jianyu wang.jpg" style="width: 177px; height: 248px">
           </div>
           <div class="col-md-9">
-            <p style="font-family: Arial, sans-serif; color:red; font-size: 18px;"><b>I am interested in pursuing a Direct Ph.D. in the fall of 2025 and am exploring potential positions!</b></p>
+            <p style="font-family: Arial, sans-serif; color:red; font-size: 18px;"><b>I am interested in pursuing a Direct Ph.D. and am exploring potential positions in 2025 fall!</b></p>
             <p></p>
             <b>Undergraduate</b>, Expected Graduation: June 2025<br>
             <b>Major:</b> Microelectronic Science and Engineering<br>
