--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <b>Department:</b> School of Integrated Circuits and Electronics<br>
             <b>Research Interests:</b> Artificial Intelligence, Robotics, Embedded Systems, and Microelectronics.
             <p></p>
-            <b>E-mail: </b><a href="jianyu.wang@bit.edu.cn">jianyu.wang@bit.edu.cn</a><br>
+            <b>E-mail:</b> jianyu.wang@bit.edu.cn <br>
             <b>Address:</b> 5 South Zhongguancun Street, Haidian District, Beijing, China
             <p></p>
             <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl">[Google Scholar]</a>
