--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p></p>
             <b>Undergraduate</b>, Expected Graduation: June 2025<br>
             <b>Major:</b> Microelectronic Science and Engineering<br>
-            <b>University:</b> Beijing Institute of Technology<br>
+            <b>University:</b><a href="https://english.bit.edu.cn/">Beijing Institute of Technology</a><br>
             <b>Department:</b> School of Integrated Circuits and Electronics<br>
             <b>Research Interests:</b> Artificial Intelligence, Robotics, Embedded Systems, and Microelectronics.
             <p></p>
