--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <b>Undergraduate</b>, Expected Graduation: June 2025<br>
             <b>Major:</b> Microelectronic Science and Engineering<br>
             <b>University:</b> <a href="https://english.bit.edu.cn/">Beijing Institute of Technology</a><br>
-            <b>Department:</b> School of Integrated Circuits and Electronics<br>
+            <b>Department:</b> <a href="https://ice.bit.edu.cn/">School of Integrated Circuits and Electronics</a><br>
             <b>Research Interests:</b> Artificial Intelligence, Robotics, Embedded Systems, and Microelectronics.
             <p></p>
             <b>E-mail:</b> jianyu.wang@bit.edu.cn <br>
