--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl">[Google Scholar]</a>
             <a href="https://www.semanticscholar.org/author/Jianyu-Wang/2290025108">[Semantic Scholar]</a>
             <a href="https://github.com/jianyu03">[Github]</a>
-            <a href="./cv/Jianyu Wang.pdf">[CV]</a>
+            <a href="./cv/Jianyu_Wang_s_CV.pdf">[CV]</a>
           </div>
           
         </div>
