--- a/index.html
+++ b/index.html
@@ -156,6 +156,23 @@
       text: 'Thumbnail'
     });
   </script>
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <tr>
+  <td style="padding:20px;width:100%;vertical-align:middle">
+    <heading>Research</heading>
+    <p>
+Our research goal is to enhance the autonomy and generalization of robotic systems in open environments. By leveraging cross-disciplinary knowledge such as deep learning, robotics, and control, our research interests lies on <strong>Embodied Robotics: Spatial-AI perception, Cognitive navigation, Cross-embodiment intelligence</strong>. We have developed a variety of robot systems that operate in structured/semi-structured/field environments. 
+</p>
+
+<p>
+We are looking for candidates who have strong self-motivation, intense interest in robotic systems, and desire to combine artificial intelligence with practical robotics systems. For prospective students: If you are interested in working with us as a Master/PhD student or intership student, please feel free to contact me.
+
+    </p>
+  </td>
+</tr>
+</tbody></table>
+
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 <tr>
   <td style="padding:10px;width:40%;vertical-align:middle">
