--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
   <td style="padding:20px;width:100%;vertical-align:middle">
     <heading>Research</heading>
     <p>
-Our research goal is to enhance the autonomy and generalization of robotic systems in open environments. By leveraging cross-disciplinary knowledge such as deep learning, robotics, and control, our research interests lies on <strong>Embodied Robotics: Spatial-AI perception, Cognitive navigation, Cross-embodiment intelligence</strong>. We have developed a variety of robot systems that operate in structured/semi-structured/field environments. 
-</p>
+    Our research goal is to enhance the autonomy and generalization of robotic systems in open environments. By leveraging cross-disciplinary knowledge such as deep learning, robotics, and control, our research interests lies on <strong>Embodied Robotics: Spatial-AI perception, Cognitive navigation, Cross-embodiment intelligence</strong>. We have developed a variety of robot systems that operate in structured/semi-structured/field environments. 
+    </p>
 
-<p>
-We are looking for candidates who have strong self-motivation, intense interest in robotic systems, and desire to combine artificial intelligence with practical robotics systems. For prospective students: If you are interested in working with us as a Master/PhD student or intership student, please feel free to contact me.
+    <p>
+    We are looking for candidates who have strong self-motivation, intense interest in robotic systems, and desire to combine artificial intelligence with practical robotics systems. For prospective students: If you are interested in working with us as a Master/PhD student or intership student, please feel free to contact me.
 
     </p>
   </td>
@@ -176,7 +176,7 @@ We are looking for candidates who have strong self-motivation, intense interest 
 
 <tr>
   <td style="padding:10px;width:40%;vertical-align:middle">
-    <img src='images/chen2024arxiv.gif' width="100%">
+    <img src='image/context-aware-example.png' width="100%">
   </td>
   <td style="padding:20px;width:70%;vertical-align:middle">
     <papertitle> Accelerating Robot Learning of Complex and Long-Term Tasks</papertitle>
