--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <script src="./config_file/selected.js"></script>
 
   <title>About - Jianyu Wang's Homepage</title>
-
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <style>
+    #mmvst_globe {
+        width: 300px; /* 设置地球的宽度 */
+        height: 300px; /* 设置地球的高度 */
+    }
+  </style>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="./config_file/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
