--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <script src="./config_file/selected.js"></script>
 
   <title>About - Jianyu Wang's Homepage</title>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <!-- <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <style>
     #mmvst_globe {
         width: 300px; /* 设置地球的宽度 */
         height: 300px; /* 设置地球的高度 */
     }
-  </style>
+  </style> -->
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="./config_file/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -164,7 +164,7 @@
   </script>
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
   <tr>
-  <td style="padding:20px;width:50%;vertical-align:middle">
+  <td style="padding:20px;width:80%;vertical-align:middle">
     <heading>Research</heading>
     <p>
     Our research goal is to enhance the autonomy and generalization of robotic systems in open environments. By leveraging cross-disciplinary knowledge such as deep learning, robotics, and control, our research interests lies on <strong>Embodied Robotics: Spatial-AI perception, Cognitive navigation, Cross-embodiment intelligence</strong>. We have developed a variety of robot systems that operate in structured/semi-structured/field environments. 
@@ -182,7 +182,7 @@
 
 <tr>
   <td style="padding:10px;width:40%;vertical-align:middle">
-    <img src='image/context-aware-example.png' width="30%">
+    <img src="./image/context-aware-example.png" style="width: 177px; height: 248px">
   </td>
   <td style="padding:20px;width:70%;vertical-align:middle">
     <papertitle> Accelerating Robot Learning of Complex and Long-Term Tasks</papertitle>
