--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Jianyu Wang">
 
   <script src="./config_file/jquery-3.6.1.min.js"></script>
   <script src="./config_file/selected.js"></script>
@@ -32,11 +32,11 @@
     <div class="row">
       <div class="col-md-12 blog-main">
         <h3 class="pb-3 mb-4 font-italic border-bottom">
-          Jianyu Wang (王健宇)
+          Jianyu Wang | 王健宇
         </h3>
         <div class="row">
           <div class="col-md-3">
-            <img src="./image/jianyu wang.jpg" class="img-fluid" alt="Jianyu Wang">
+            <img src="./image/jianyu wang.jpg" style="width: 177px; height: 248px;">
           </div>
           <div class="col-md-9">
             <p style="font-family: Arial, sans-serif; color:red; font-size: 18px;"><b>I am interested in pursuing a Direct Ph.D. and am exploring potential positions in 2025 fall.</b></p>
@@ -82,7 +82,7 @@
       <tbody>
         <tr>
           <td class="col-md-4">
-            <img src="./image/context-aware-example.png" class="img-fluid" alt="Context-Aware Example">
+            <img src="./image/context-aware-example.png" style="width: 177px; height: 248px;">
           </td>
           <td class="col-md-8">
             <h5>Accelerating Robot Learning of Complex and Long-Term Tasks</h5>
