--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <p>
           <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl" class="btn btn-primary" target="_blank">Google Scholar</a>
           <a href="https://github.com/jianyu03" class="btn btn-dark" target="_blank">Github</a>
-          <a href="./cv/Jianyu_Wang_s_CV_CN.pdf" class="btn btn-secondary" target="_blank">Chinese CV</a>
+          <a href="./cv/Jianyu_Wang_s_CV_CN.pdf" class="btn btn-secondary" target="_blank">CV</a>
         </p>
       </div>
     </div>
