--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     .section-title {
       font-size: 24px;
       margin-bottom: 20px;
-      border-bottom: 2px solid #007bff;
+      border-bottom: 2px solid #002366;
       padding-bottom: 10px;
-      color: #007bff;
+      color: #002366;
     }
 
     .highlight {
@@ -47,6 +47,7 @@
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
     }
 
     .research-title {
@@ -77,7 +78,7 @@
     .footer {
       margin-top: 40px;
       padding: 20px;
-      background-color: #007bff;
+      background-color: #002366;
       color: white;
       text-align: center;
       border-radius: 8px;
@@ -115,7 +116,7 @@
         <p>
           <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl" class="btn btn-primary" target="_blank">Google Scholar</a>
           <a href="https://github.com/jianyu03" class="btn btn-dark" target="_blank">Github</a>
-          <a href="./cv/Jianyu_Wang_s_CV_CN.pdf" class="btn btn-secondary" target="_blank">CV</a>
+          <a href="./cv/Jianyu_Wang_s_CV_CN.pdf" class="btn btn-secondary" target="_blank">Chinese CV</a>
         </p>
       </div>
     </div>
@@ -130,24 +131,32 @@
       </p>
     </div>
 
-    <div class="table-container mt-5 text-center">
-      <table class="table d-inline-block">
-        <tbody>
-          <tr>
-            <td class="col-md-4">
-              <img src="./image/context-aware-example.png" class="img-fluid" style="width: 177px; height: 248px;">
-            </td>
-            <td class="col-md-8 text-left">
-              <h5 class="paper-title">Accelerating Robot Learning of Complex and Long-Term Tasks</h5>
-              <p class="paper-authors">
-                <a>Guangyan Chen</a>, <a>Haoyang Lu</a>, <a>Te Cui</a>, <a>Mengxiao Hu</a>, <a>Zicai Peng</a>, <a>Tianxing Zhou</a>, <strong>Yufeng Yue*</strong>
-                <br>
-                <span class="paper-journal">Arxiv 2024</span>
-              </p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="table-container">
+      <h2 class="section-title">Academic Papers</h2>
+      <p><strong>*</strong> denotes equal contribution, <strong>†</strong> denotes corresponding author.</p>
+      <!-- Example paper block -->
+      <div class="table-container mt-3">
+        <div class="d-flex align-items-center justify-content-center">
+          <table class="table mb-0">
+            <tbody>
+              <tr>
+                <td class="col-md-4 text-center align-middle">
+                  <img src="./image/context-aware-example.png" class="img-fluid" style="width: 177px; height: 248px;">
+                </td>
+                <td class="col-md-8 align-middle text-left">
+                  <h5 class="paper-title">Accelerating Robot Learning of Complex and Long-Term Tasks</h5>
+                  <p class="paper-authors">
+                    <a>Guangyan Chen*</a>, <a>Haoyang Lu*</a>, <a>Te Cui</a>, <a>Mengxiao Hu</a>, <a>Zicai Peng</a>, <a>Tianxing Zhou</a>, <a>Yufeng Yue†</a>
+                    <br>
+                    <span class="paper-journal">Arxiv 2024</span>
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <!-- Additional paper blocks can be added here -->
     </div>
 
     <div class="footer">
