--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p>
           <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl" class="btn btn-primary" target="_blank">Google Scholar</a>
           <a href="https://github.com/jianyu03" class="btn btn-dark" target="_blank">Github</a>
-          <a href="./cv/Jianyu_Wang_s_CV_CN.pdf" class="btn btn-secondary" target="_blank">Chinese CV</a>
+          <a href="./cv/Jianyu_Wang_s_CV_CN.pdf" class="btn btn-secondary" target="_blank">CV</a>
         </p>
       </div>
     </div>
@@ -132,8 +132,8 @@
     </div>
 
     <div class="table-container">
-      <h2 class="section-title">Academic Papers</h2>
-      <p><strong>*</strong> denotes equal contribution, <strong>†</strong> denotes corresponding author.</p>
+      <h2 class="section-title">Publications</h2>
+      <p><strong>*</strong>Equal contribution <strong>†</strong>Corresponding author</p>
       <!-- Example paper block -->
       <div class="table-container mt-3">
         <div class="d-flex align-items-center justify-content-center">
