--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <div class="container">
     <div class="text-center mb-4">
-      <h1 class="section-title">Jianyu Wang (王健宇)</h1>
+      <h1 class="section-title">Jianyu Wang | 王健宇</h1>
     </div>
 
     <div class="row mb-4">
@@ -126,9 +126,6 @@
       <p class="research-content">
         Our research goal is to enhance the autonomy and generalization of robotic systems in open environments. By leveraging cross-disciplinary knowledge such as deep learning, robotics, and control, our research interests lie in <strong>Embodied Robotics: Spatial-AI perception, Cognitive navigation, Cross-embodiment intelligence</strong>. We have developed a variety of robot systems that operate in structured/semi-structured/field environments.
       </p>
-      <p class="research-content">
-        We are looking for candidates who have strong self-motivation, intense interest in robotic systems, and desire to combine artificial intelligence with practical robotics systems. For prospective students: If you are interested in working with us as a Master/PhD student or internship student, please feel free to contact me.
-      </p>
     </div>
 
     <div class="table-container">
@@ -144,11 +141,11 @@
                   <img src="./image/context-aware-example.png" class="img-fluid" style="width: 177px; height: 248px;">
                 </td>
                 <td class="col-md-8 align-middle text-left">
-                  <h5 class="paper-title">Accelerating Robot Learning of Complex and Long-Term Tasks</h5>
+                  <h5 class="paper-title">CoGenesis: A Framework Collaborating Large and Small Language Models for Secure Context-Aware Instruction Following</h5>
                   <p class="paper-authors">
-                    <a>Guangyan Chen*</a>, <a>Haoyang Lu*</a>, <a>Te Cui</a>, <a>Mengxiao Hu</a>, <a>Zicai Peng</a>, <a>Tianxing Zhou</a>, <a>Yufeng Yue†</a>
+                    <a>Kaiyan Zhang</a>, <a><strong>Jianyu Wang</strong></a>, <a>Ermo Hua</a>, <a>Biqing Qi</a>, <a>Ning Ding</a>, <a>Bowen Zhou†</a>
                     <br>
-                    <span class="paper-journal">Arxiv 2024</span>
+                    <span class="paper-journal">ACL 2024</span>
                   </p>
                 </td>
               </tr>
