--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
                     <a>Kaiyan Zhang</a>, <a><strong>Jianyu Wang</strong></a>, <a>Ermo Hua</a>, <a>Biqing Qi</a>, <a>Ning Ding</a>, <a>Bowen Zhou†</a>
                     <br>
                     <span class="paper-journal">ACL 2024</span>
+                    <a href="https://arxiv.org/pdf/2403.03129" class="btn btn-outline-primary btn-sm mt-2" target="_blank">Paper</a>
+                    <a href="https://github.com/TsinghuaC3I/CoGenesis" class="btn btn-outline-secondary btn-sm mt-2" target="_blank">Code</a>
                   </p>
                 </td>
               </tr>
