--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <div class="table-container">
       <h2 class="section-title">Publications</h2>
-      <p><strong>*</strong>Equal contribution <strong>†</strong>Corresponding author</p>
+      <p><strong><sup>*</sup></strong>Equal contribution <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
       <div class="table-container mt-3">
         <div class="d-flex align-items-center justify-content-center">
@@ -143,11 +143,13 @@
                 <td class="col-md-8 align-middle text-left">
                   <h5 class="paper-title">CoGenesis: A Framework Collaborating Large and Small Language Models for Secure Context-Aware Instruction Following</h5>
                   <p class="paper-authors">
-                    <a>Kaiyan Zhang</a>, <a><strong>Jianyu Wang</strong></a>, <a>Ermo Hua</a>, <a>Biqing Qi</a>, <a>Ning Ding</a>, <a>Bowen Zhou†</a>
+                    <a>Kaiyan Zhang</a>, <a><strong>Jianyu Wang</strong></a>, <a>Ermo Hua</a>, <a>Biqing Qi</a>, <a>Ning Ding</a>, <a>Bowen Zhou<sup>†</sup></a>
                     <br>
-                    <span class="paper-journal">ACL 2024</span>
-                    <a href="https://arxiv.org/pdf/2403.03129" class="btn btn-outline-primary btn-sm mt-2" target="_blank">Paper</a>
-                    <a href="https://github.com/TsinghuaC3I/CoGenesis" class="btn btn-outline-secondary btn-sm mt-2" target="_blank">Code</a>
+                    <span class="paper-journal">The 62nd Annual Meeting of the Association for Computational Linguistics</span>
+                    <div class="text-right mt-2"></div>
+                      <a href="https://arxiv.org/pdf/2403.03129" class="btn btn-outline-primary btn-sm mt-2" target="_blank">Paper</a>
+                      <a href="https://github.com/TsinghuaC3I/CoGenesis" class="btn btn-outline-secondary btn-sm mt-2" target="_blank">Code</a>
+                    </div>
                   </p>
                 </td>
               </tr>
