--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                     <a>Kaiyan Zhang</a>, <a><strong>Jianyu Wang</strong></a>, <a>Ermo Hua</a>, <a>Biqing Qi</a>, <a>Ning Ding</a>, <a>Bowen Zhou<sup>†</sup></a>
                     <br>
                     <span class="paper-journal">The 62nd Annual Meeting of the Association for Computational Linguistics</span>
-                    <div class="text-right mt-2"></div>
-                      <a href="https://arxiv.org/pdf/2403.03129" class="btn btn-outline-primary btn-sm mt-2" target="_blank">Paper</a>
-                      <a href="https://github.com/TsinghuaC3I/CoGenesis" class="btn btn-outline-secondary btn-sm mt-2" target="_blank">Code</a>
+                    <div class="text-right mt-2">
+                      <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">View Paper</a>
+                      <a href="https://github.com/TsinghuaC3I/CoGenesis" class="btn btn-outline-secondary btn-sm" target="_blank">View Code</a>
                     </div>
                   </p>
                 </td>
