--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     <br>
                     <span class="paper-journal">The 62nd Annual Meeting of the Association for Computational Linguistics</span> - <span class="paper-date">March 2024</span>
                     <div class="text-right mt-2">
-                      <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">View Paper</a>
-                      <a href="https://github.com/TsinghuaC3I/CoGenesis" class="btn btn-outline-secondary btn-sm" target="_blank">View Code</a>
+                      <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">Paper</a>
+                      <a href="https://github.com/TsinghuaC3I/CoGenesis" class="btn btn-outline-secondary btn-sm" target="_blank">Code</a>
                     </div>
                   </p>
                 </td>
