--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
 
     <div class="table-container">
-      <h2 class="section-title">Research</h2>
+      <h2 class="section-title">Introduction</h2>
       <p class="research-content">
         I am an undergraduate student at Beijing Institute of Technology, majoring in Microelectronics Science and Engineering. My research focuses on edge-cloud collaborative language models, MEMS sensor design, and robotic systems. I have conducted research at Tsinghua University and BIT, leading to innovative advancements in secure edge-cloud frameworks and high-precision flexible sensors.
       </p>
