--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <tbody>
               <tr>
                 <td class="col-md-4 text-center align-middle">
-                  <img src="./image/context-aware-example.png" class="img-fluid" style="width: 177px; height: 248px;">
+                  <img src="./image/pub1.png" class="img-fluid" style="width: 177px; height: 248px;">
                 </td>
                 <td class="col-md-8 align-middle text-left">
                   <h5 class="paper-title">CoGenesis: A Framework Collaborating Large and Small Language Models for Secure Context-Aware Instruction Following</h5>
@@ -152,6 +152,32 @@
                     <div class="text-right mt-2">
                       <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">Paper</a>
                       <a href="https://github.com/TsinghuaC3I/CoGenesis" class="btn btn-outline-secondary btn-sm" target="_blank">Code</a>
+                    </div>
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="table-container mt-3">
+        <div class="d-flex align-items-center justify-content-center">
+          <table class="table mb-0">
+            <tbody>
+              <tr>
+                <td class="col-md-4 text-center align-middle">
+                  <img src="./image/pub2.png" class="img-fluid" style="width: 177px; height: 248px;">
+                </td>
+                <td class="col-md-8 align-middle text-left">
+                  <h5 class="paper-title">Fast and Slow Generating: An Empirical Study on Large and Small Language Models Collaborative Decoding</h5>
+                  <p class="paper-authors">
+                    <a>Kaiyan Zhang<sup>*</sup></a>, <a><strong>Jianyu Wang<sup>*</sup></strong></a>, <a>Ning Ding</a>, <a>Biqing Qi</a>, <a>Ermo Hua</a>, <a>Xingtai Lv</a>, <a>Bowen Zhou<sup>†</sup></a>
+                    <br>
+                    <span class="paper-journal">Arxiv preprint</span> - <span class="paper-date">June 2024</span>
+                    <div class="text-right mt-2">
+                      <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">Paper</a>
+                      <a href="https://github.com/TsinghuaC3I/FS-Gen" class="btn btn-outline-secondary btn-sm" target="_blank">Code</a>
                     </div>
                   </p>
                 </td>
