--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <div class="table-container">
       <h2 class="section-title">Publications</h2>
-      <p><strong><sup>*</sup></strong>Equal contribution <strong><sup>†</sup></strong>Corresponding author</p>
+      <p class="text-right"><strong><sup>*</sup></strong>Equal contribution <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
       <div class="table-container mt-3">
         <div class="d-flex align-items-center justify-content-center">
