--- a/index.html
+++ b/index.html
@@ -77,16 +77,10 @@
 
     .publication-info {
       font-size: 14px;
-      padding-left: 20px;
     }
 
     @media (max-width: 576px) {
       .publication-info {
-        font-size: 14px;
-        padding-left: 0;
-      }
-
-      .publication-info li {
         display: block;
         text-align: left;
       }
@@ -150,11 +144,8 @@
 
     <div class="table-container">
       <h2 class="section-title">Publications</h2>
-      <ol class="publication-info">
-        <li><strong><sup>*</sup></strong> Equal contribution</li>
-        <li><strong><sup>†</sup></strong> Corresponding author</li>
-      </ol>
-      <!-- Example paper block -->
+      <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contribution <strong><sup>†</sup></strong>Corresponding author</p>
+         <!-- Example paper block -->
       <div class="table-container mt-3">
         <div class="row">
           <div class="col-md-4 text-center align-middle">
