--- a/index.html
+++ b/index.html
@@ -99,18 +99,9 @@
         text-align: left;
       }
 
-      .col-md-9.mt-3.mt-md-0 {
+      .profile-margin {
         margin-top: 1rem;
       }
-    }
-
-    .paper-block {
-      height: 400px; /* Adjust the height as needed */
-    }
-
-    .paper-block img {
-      max-width: 100%;
-      height: auto;
     }
   </style>
 </head>
@@ -126,7 +117,7 @@
       <div class="col-md-3 text-center">
         <img src="./image/jianyu wang.jpg" class="profile-img img-fluid" alt="Jianyu Wang" style="width: 177px; height: 248px;">
       </div>
-      <div class="col-md-9 mt-3 mt-md-0">
+      <div class="col-md-9 mt-3 mt-md-0 profile-margin">
         <p><b>Undergraduate</b>, Expected Graduation: June 2025<br>
           <b>Major:</b> Microelectronic Science and Engineering<br>
           <b>University:</b> Beijing Institute of Technology<br>
@@ -156,33 +147,12 @@
 
     <div class="table-container">
       <h2 class="section-title">Publications</h2>
-      <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contributions<strong><sup>†</sup></strong>Corresponding author</p>
+      <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contribution <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
-
-      <div class="table-container mt-3 paper-block">
+      <div class="table-container mt-3">
         <div class="row">
           <div class="col-md-4 text-center align-middle">
-            <img src="./image/pub2.png" class="img-fluid">
-          </div>
-          <div class="col-md-8 align-middle text-left">
-            <h5 class="paper-title">Fast and Slow Generating: An Empirical Study on Large and Small Language Models Collaborative Decoding</h5>
-            <p class="paper-authors">
-              <a>Kaiyan Zhang<sup>*</sup></a>, <a><strong>Jianyu Wang<sup>*</sup></strong></a>, <a>Ning Ding</a>, <a>Biqing Qi</a>, <a>Ermo Hua</a>, <a>Xingtai Lv</a>, <a>Bowen Zhou<sup>†</sup></a>
-              <br>
-              <span class="paper-journal">Arxiv Preprint</span> - <span class="paper-date">June 2024</span>
-              <div class="text-right mt-2">
-                <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">Paper</a>
-                <a href="https://github.com/TsinghuaC3I/FS-Gen" class="btn btn-outline-secondary btn-sm" target="_blank">Code</a>
-              </div>
-            </p>
-          </div>
-        </div>
-      </div>
-      
-      <div class="table-container mt-3 paper-block">
-        <div class="row">
-          <div class="col-md-4 text-center align-middle">
-            <img src="./image/pub1.png" class="img-fluid">
+            <img src="./image/pub1.png" class="img-fluid" style="width: 100%; height: auto; max-height: 248px;">
           </div>
           <div class="col-md-8 align-middle text-left">
             <h5 class="paper-title">CoGenesis: A Framework Collaborating Large and Small Language Models for Secure Context-Aware Instruction Following</h5>
@@ -199,6 +169,25 @@
         </div>
       </div>
 
+      <div class="table-container mt-3">
+        <div class="row">
+          <div class="col-md-4 text-center align-middle">
+            <img src="./image/pub2.png" class="img-fluid" style="width: 100%; height: auto; max-height: 248px;">
+          </div>
+          <div class="col-md-8 align-middle text-left">
+            <h5 class="paper-title">Fast and Slow Generating: An Empirical Study on Large and Small Language Models Collaborative Decoding</h5>
+            <p class="paper-authors">
+              <a>Kaiyan Zhang<sup>*</sup></a>, <a><strong>Jianyu Wang<sup>*</sup></strong></a>, <a>Ning Ding</a>, <a>Biqing Qi</a>, <a>Ermo Hua</a>, <a>Xingtai Lv</a>, <a>Bowen Zhou<sup>†</sup></a>
+              <br>
+              <span class="paper-journal">Arxiv preprint</span> - <span class="paper-date">June 2024</span>
+              <div class="text-right mt-2">
+                <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">Paper</a>
+                <a href="https://github.com/TsinghuaC3I/FS-Gen" class="btn btn-outline-secondary btn-sm" target="_blank">Code</a>
+              </div>
+            </p>
+          </div>
+        </div>
+      </div>
       <!-- Additional paper blocks can be added here -->
     </div>
 
