--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="table-container mt-3">
         <div class="row">
           <div class="col-md-4 text-center align-middle">
-            <img src="./image/pub2.png" class="img-fluid" style="width: auto; height: 100%; max-width: 248px;">
+            <img src="./image/pub2.png" class="img-fluid" style="width: auto; height: 240px; max-width: 248px;">
           </div>
           <div class="col-md-8 align-middle text-left">
             <h5 class="paper-title">Fast and Slow Generating: An Empirical Study on Large and Small Language Models Collaborative Decoding</h5>
@@ -173,7 +173,7 @@
       <div class="table-container mt-3">
         <div class="row">
           <div class="col-md-4 text-center align-middle">
-            <img src="./image/pub1.png" class="img-fluid" style="width: auto; height: 100%; max-width: 248px;">
+            <img src="./image/pub1.png" class="img-fluid" style="width: auto; height: 240px; max-width: 248px;">
           </div>
           <div class="col-md-8 align-middle text-left">
             <h5 class="paper-title">CoGenesis: A Framework Collaborating Large and Small Language Models for Secure Context-Aware Instruction Following</h5>
