--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <div class="table-container">
       <h2 class="section-title">Publications</h2>
-      <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contribution <strong><sup>†</sup></strong>Corresponding author</p>
+      <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
       
       <div class="table-container mt-3">
