--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
       
-      <div class="table-container mt-3">
+      <!-- <div class="table-container mt-3">
         <div class="row">
           <div class="col-md-4 text-center align-middle">
             <img src="./image/pub2.png" class="img-fluid" style="width: auto; height: auto; max-width: 248px; max-height: 320px;">
@@ -168,7 +168,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="table-container mt-3">
         <div class="row">
