--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
       
-      <!-- <div class="table-container mt-3">
+      <div class="table-container mt-3">
         <div class="row">
           <div class="col-md-4 text-center align-middle">
             <img src="./image/pub2.png" class="img-fluid" style="width: auto; height: auto; max-width: 248px; max-height: 320px;">
@@ -162,13 +162,13 @@
               <br>
               <span class="paper-journal">Arxiv preprint</span> - <span class="paper-date">June 2024</span>
               <div class="text-right mt-2">
-                <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">Paper</a>
+                <a href="https://arxiv.org/abs/2406.12295" class="btn btn-outline-primary btn-sm" target="_blank">Paper</a>
                 <a href="https://github.com/TsinghuaC3I/FS-Gen" class="btn btn-outline-secondary btn-sm" target="_blank">Code</a>
               </div>
             </p>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <div class="table-container mt-3">
         <div class="row">
