--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="table-container">
       <h2 class="section-title">Introduction</h2>
       <p class="research-content">
-        I am an undergraduate student at Beijing Institute of Technology, majoring in Microelectronics Science and Engineering. My research focuses on edge-cloud collaborative language models, MEMS sensor design, and robotic systems. I have conducted research at Tsinghua University and BIT, leading to innovative advancements in secure edge-cloud frameworks and high-precision flexible sensors.
+        I am an undergraduate student at Beijing Institute of Technology, majoring in Microelectronics Science and Engineering. My research focuses on edge-cloud collaborative language models, MEMS sensor design, and robotic systems. I have conducted research at Tsinghua University and Beijing Institute of Technology, leading to innovative advancements in secure edge-cloud frameworks and high-precision flexible sensors.
       </p>
       <!-- <p class="research-content">
         With a strong foundation in Python, C/C++, Matlab, deep learning, and simulation tools like Ansys and SolidWorks, I have led projects that received national recognition and awards. I am dedicated to advancing technology through interdisciplinary research and practical applications.
