--- a/index.html
+++ b/index.html
@@ -146,10 +146,8 @@
     </div>
 
     <div class="table-container">
-      <div class="d-flex justify-content-between align-items-center">
-        <h2 class="section-title">Publications</h2>
-        <input type="text" id="searchInput" class="form-control" style="width: 200px;" placeholder="Search publications...">
-      </div>
+      <h2 class="section-title">Publications</h2>
+      <input type="text" id="searchInput" class="form-control mb-3" placeholder="Search publications...">
       <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
       
