--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <div class="table-container">
       <h2 class="section-title">Publications</h2>
-      <input type="text" id="searchInput" class="form-control mb-3" placeholder="Search publications...">
+      <input type="text" id="searchInput" class="form-control mb-3" style="width: 200px;" placeholder="Search publications...">
       <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
       
@@ -192,7 +192,7 @@
       </div>
     
       <!-- Additional paper blocks can be added here -->
-    </div>
+    </div>z
 
     <div class="footer">
       <p>&copy; 2024 Jianyu Wang. All rights reserved.</p>
