--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 
     <div class="table-container">
       <h2 class="section-title">Publications</h2>
-      <input type="text" id="searchInput" class="form-control mb-3" style="width: 200px; float: right;" placeholder="Search publications...">
-      <p class="text-left publication-info"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
+      <input type="text" id="searchInput" class="form-control mb-3" placeholder="Search publications...">
+      <p class="text-right publication-info"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
       <!-- Example paper block -->
       
       <div class="table-container mt-3 publication">
