--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       .publication-info {
         display: block;
         text-align: left;
+        margin-bottom: 10px;
       }
 
       .profile-margin {
@@ -147,8 +148,8 @@
 
     <div class="table-container">
       <h2 class="section-title">Publications</h2>
-      <div class="d-flex justify-content-between align-items-center">
-        <p class="publication-info mb-0"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
+      <div class="d-flex flex-column flex-sm-row justify-content-between align-items-start align-items-sm-center">
+        <p class="publication-info mb-2 mb-sm-0"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
         <input type="text" id="searchInput" class="form-control" style="width: 200px;" placeholder="Search publications...">
       </div>
       <!-- Example paper block -->
