--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <h2 class="section-title">Publications</h2>
       <div class="d-flex flex-column flex-sm-row justify-content-between align-items-start align-items-sm-center">
         <p class="publication-info mb-2 mb-sm-0"><strong><sup>*</sup></strong>Equal contributions <strong><sup>†</sup></strong>Corresponding author</p>
-        <input type="text" id="searchInput" class="form-control" style="width: 200px;" placeholder="Search publications...">
+        <input type="text" id="searchInput" class="form-control" style="width: 200px; float: right;" placeholder="Search publications...">
       </div>
       <!-- Example paper block -->
       
