--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
               <span class="paper-journal">The 62nd Annual Meeting of the Association for Computational Linguistics</span> - <span class="paper-date">March 2024</span>
               <p class="mt-2">
                 <span class="badge badge-primary">AI</span>
-                <span class="badge badge-secondary">Secure Context</span>
-                <span class="badge badge-info">Instruction Following</span>
+                <span class="badge badge-secondary">Collaborating Decoding</span>
+                <span class="badge badge-info">Context-Aware</span>
               </p>
               <div class="text-right mt-2">
                 <a href="https://arxiv.org/abs/2403.03129" class="btn btn-outline-primary btn-sm" target="_blank">Paper</a>
