--- a/index.html
+++ b/index.html
@@ -113,9 +113,6 @@
     <div class="text-center mb-4">
       <h1 class="section-title">Jianyu Wang | 王健宇</h1>
     </div>
-    <div class="text-right text-muted">
-      Last updated: June 19, 2024
-    </div>
     <div class="row mb-4">
       <div class="col-md-3 text-center">
         <img src="./image/jianyu wang.jpg" class="profile-img img-fluid" alt="Jianyu Wang" style="width: 177px; height: 248px;">
@@ -213,9 +210,11 @@
 
     <div class="footer">
       <p>&copy; 2024 Jianyu Wang. All rights reserved.</p>
-      <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+      <!-- <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p> -->
     </div>
-
+    <div class="text-right text-muted">
+      Last updated: June 19, 2024
+    </div>
   </div>
 
   <script src="./config_file/holder.min.js"></script>
